--- a/Views/Jasmine/SpecRunner.cshtml
+++ b/Views/Jasmine/SpecRunner.cshtml
@@ -10,15 +10,13 @@
   <script type="text/javascript" src="/Scripts/jasmine/boot.js"></script>
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="~/spec/TheDOMSpec.js"></script>
-  <script type="text/javascript" src="~/spec/CanvasManagerSpec.js"></script>
-  <script type="text/javascript" src="~/spec/ControllerEntitySpec.js"></script>
+  <script type="text/javascript" src="~/spec/BrickbotSpec.js"></script>
 </head>
 
 <body>
     <!-- include source files here... -->
-    <script type="text/javascript" src="~/jquery/jquery-2.1.1.min.js"></script>
     <canvas id="theCanvas" width="0" height="0"></canvas>
+    <script type="text/javascript" src="~/js/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="~/js/engine.js"></script>
 </body>
 </html>
