move classes and specs into individual files
also refactored AssetManager to not use namespace qualifier

--- a/tests/Views/Jasmine/SpecRunner.cshtml
+++ b/tests/Views/Jasmine/SpecRunner.cshtml
@@ -9,11 +9,23 @@
     <script type="text/javascript" src="/tests/Scripts/jasmine/boot.js"></script>
 
     <!-- include spec files here... -->
-    <script type="text/javascript" src="~/tests/spec/BrickvastSpec.js"></script>
-
+    <script type="text/javascript" src="~/tests/spec/AssetManagerSpec.js"></script>
+    <script type="text/javascript" src="~/tests/spec/CanvasManagerSpec.js"></script>
+    <script type="text/javascript" src="~/tests/spec/ControllerSpec.js"></script>
+    <script type="text/javascript" src="~/tests/spec/GameSpec.js"></script>
+    <script type="text/javascript" src="~/tests/spec/MathUtilSpec.js"></script>
+    <script type="text/javascript" src="~/tests/spec/TheDOMSpec.js"></script>
+    
     <!-- include source files here... -->
-    <script type="text/javascript" src="~/js/jquery-2.1.1.min.js" async></script>
-    <script type="text/javascript" src="~/js/engine.js" async></script>
+    <script type="text/javascript" src="~/js/jquery-2.1.1.min.js" defer></script>
+    <script type="text/javascript" src="~/js/AssetManager.js" defer></script>
+    <script type="text/javascript" src="~/js/CanvasManager.js" defer></script>
+    <script type="text/javascript" src="~/js/Controller.js" defer></script>
+    <script type="text/javascript" src="~/js/Entity.js" defer></script>
+    <script type="text/javascript" src="~/js/MathUtil.js" defer></script>
+    <script type="text/javascript" src="~/js/TheDOM.js" defer></script>
+    <script type="text/javascript" src="~/js/Game.js" defer></script>
+
 </head>
 <body>
     <canvas id="theCanvas" width="0" height="0"></canvas>
