more file reorganization

--- a/tests/Views/Jasmine/SpecRunner.cshtml
+++ b/tests/Views/Jasmine/SpecRunner.cshtml
@@ -18,13 +18,13 @@
     
     <!-- include source files here... -->
     <script type="text/javascript" src="~/js/jquery-2.1.1.min.js" defer></script>
-    <script type="text/javascript" src="~/js/AssetManager.js" defer></script>
-    <script type="text/javascript" src="~/js/CanvasManager.js" defer></script>
-    <script type="text/javascript" src="~/js/Controller.js" defer></script>
-    <script type="text/javascript" src="~/js/Entity.js" defer></script>
-    <script type="text/javascript" src="~/js/MathUtil.js" defer></script>
-    <script type="text/javascript" src="~/js/TheDOM.js" defer></script>
-    <script type="text/javascript" src="~/js/Game.js" defer></script>
+    <script type="text/javascript" src="~/js/engine/AssetManager.js" defer></script>
+    <script type="text/javascript" src="~/js/engine/CanvasManager.js" defer></script>
+    <script type="text/javascript" src="~/js/engine/Controller.js" defer></script>
+    <script type="text/javascript" src="~/js/engine/Entity.js" defer></script>
+    <script type="text/javascript" src="~/js/engine/MathUtil.js" defer></script>
+    <script type="text/javascript" src="~/js/engine/TheDOM.js" defer></script>
+    <script type="text/javascript" src="~/js/engine/Game.js" defer></script>
 
 </head>
 <body>
