added sound playing demo

--- a/tests/Views/Jasmine/SpecRunner.cshtml
+++ b/tests/Views/Jasmine/SpecRunner.cshtml
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="~/tests/spec/AssetManagerSpec.js"></script>
     <script type="text/javascript" src="~/tests/spec/CanvasManagerSpec.js"></script>
     <script type="text/javascript" src="~/tests/spec/ControllerSpec.js"></script>
+    <script type="text/javascript" src="~/tests/spec/EntitySpec.js"></script>
     <script type="text/javascript" src="~/tests/spec/GameSpec.js"></script>
     <script type="text/javascript" src="~/tests/spec/MathUtilSpec.js"></script>
     <script type="text/javascript" src="~/tests/spec/TheDOMSpec.js"></script>
