--- a/tests/Views/Jasmine/SpecRunner.cshtml
+++ b/tests/Views/Jasmine/SpecRunner.cshtml
@@ -9,13 +9,12 @@
     <script type="text/javascript" src="/tests/Scripts/jasmine/boot.js"></script>
 
     <!-- include spec files here... -->
-    <script type="text/javascript" src="~/tests/spec/AssetManagerSpec.js"></script>
+    <script type="text/javascript" src="~/tests/spec/AssetManagerSpec.js" defer></script>
     <script type="text/javascript" src="~/tests/spec/CanvasManagerSpec.js"></script>
     <script type="text/javascript" src="~/tests/spec/ControllerSpec.js"></script>
     <script type="text/javascript" src="~/tests/spec/EntitySpec.js"></script>
     <script type="text/javascript" src="~/tests/spec/GameSpec.js"></script>
     <script type="text/javascript" src="~/tests/spec/MathUtilSpec.js"></script>
-    <script type="text/javascript" src="~/tests/spec/TheDOMSpec.js"></script>
     
     <!-- include source files here... -->
     <script type="text/javascript" src="~/js/jquery-2.1.1.min.js" defer></script>
@@ -24,9 +23,7 @@
     <script type="text/javascript" src="~/js/engine/Controller.js" defer></script>
     <script type="text/javascript" src="~/js/engine/Entity.js" defer></script>
     <script type="text/javascript" src="~/js/engine/MathUtil.js" defer></script>
-    <script type="text/javascript" src="~/js/engine/TheDOM.js" defer></script>
     <script type="text/javascript" src="~/js/engine/Game.js" defer></script>
-
 </head>
 <body>
     <canvas id="theCanvas" width="0" height="0"></canvas>
