--- a/spec/Views/Jasmine/SpecRunner.cshtml
+++ b/spec/Views/Jasmine/SpecRunner.cshtml
@@ -9,8 +9,7 @@
     <script type="text/javascript" src="/spec/Scripts/jasmine/boot.js"></script>
 
     <!-- include spec files here... -->
-    <script type="text/javascript" src="~/spec/AssetManagerSpec.js" defer></script>
-    <script type="text/javascript" src="~/spec/CanvasManagerSpec.js"></script>
+    <script type="text/javascript" src="~/spec/CanvasSpec.js"></script>
     <script type="text/javascript" src="~/spec/ControllerSpec.js"></script>
     <script type="text/javascript" src="~/spec/EntitySpec.js"></script>
     <script type="text/javascript" src="~/spec/GameSpec.js"></script>
@@ -18,8 +17,7 @@
     
     <!-- include source files here... -->
     <script type="text/javascript" src="~/vendor/jquery-2.1.1.min.js" defer></script>
-    <script type="text/javascript" src="~/src/AssetManager.js" defer></script>
-    <script type="text/javascript" src="~/src/CanvasManager.js" defer></script>
+    <script type="text/javascript" src="~/src/Canvas.js" defer></script>
     <script type="text/javascript" src="~/src/Controller.js" defer></script>
     <script type="text/javascript" src="~/src/Entity.js" defer></script>
     <script type="text/javascript" src="~/src/MathUtil.js" defer></script>
