--- a/spec/Views/Jasmine/SpecRunner.cshtml
+++ b/spec/Views/Jasmine/SpecRunner.cshtml
@@ -22,6 +22,5 @@
     <script type="text/javascript" src="~/src/MathUtil.js" defer></script>
     <script type="text/javascript" src="~/src/Game.js" defer></script>
 </head>
-<body>
-</body>
+<body></body>
 </html>
