refactored mouse event handling: added Input class

--- a/spec/Views/Jasmine/SpecRunner.cshtml
+++ b/spec/Views/Jasmine/SpecRunner.cshtml
@@ -16,9 +16,11 @@
     <script type="text/javascript" src="~/spec/MathUtilSpec.js"></script>
     
     <!-- include source files here... -->
+    <script type="text/javascript" src="~/src/AssetManager.js" defer></script>
     <script type="text/javascript" src="~/src/Canvas.js" defer></script>
     <script type="text/javascript" src="~/src/Controller.js" defer></script>
     <script type="text/javascript" src="~/src/Entity.js" defer></script>
+    <script type="text/javascript" src="~/src/Input.js" defer></script>
     <script type="text/javascript" src="~/src/MathUtil.js" defer></script>
     <script type="text/javascript" src="~/src/Game.js" defer></script>
 </head>
