--- a/spec/Views/Jasmine/SpecRunner.cshtml
+++ b/spec/Views/Jasmine/SpecRunner.cshtml
@@ -10,19 +10,22 @@
 
     <!-- include source files here... -->
     <!--DEBUG: -->
-    <script type="text/javascript" src="~/src/Game.js" defer></script>
     <script type="text/javascript" src="~/src/AssetManager.js" defer></script>
     <script type="text/javascript" src="~/src/Canvas.js" defer></script>
     <script type="text/javascript" src="~/src/Controller.js" defer></script>
+    <script type="text/javascript" src="~/src/Dialog.js" defer></script>
     <script type="text/javascript" src="~/src/Entity.js" defer></script>
+    <script type="text/javascript" src="~/src/Game.js" defer></script>
     <script type="text/javascript" src="~/src/Input.js" defer></script>
     <script type="text/javascript" src="~/src/MathUtil.js" defer></script>
     <!--RELEASE: 
     <script type="text/javascript" src="~/build/vastengine.js" defer></script>
 
     <!-- include spec files here... -->
+    <script type="text/javascript" src="~/spec/AssetManagerSpec.js"></script>
     <script type="text/javascript" src="~/spec/CanvasSpec.js"></script>
     <script type="text/javascript" src="~/spec/ControllerSpec.js"></script>
+    <script type="text/javascript" src="~/spec/DialogSpec.js"></script>
     <script type="text/javascript" src="~/spec/EntitySpec.js"></script>
     <script type="text/javascript" src="~/spec/GameSpec.js"></script>
     <script type="text/javascript" src="~/spec/InputSpec.js"></script>
