--- a/engine/demo/reset.css
+++ b/engine/demo/reset.css
@@ -6,6 +6,8 @@
     font-size:100%;
     vertical-align:baseline;
     background:transparent;
+    transform: translate3d(0,0,0);
+    -webkit-transform: translate3d(0,0,0);  
 }
 
 .canvasStyle {
