specs and refactoring

--- a/engine/spec/Views/Jasmine/SpecRunner.cshtml
+++ b/engine/spec/Views/Jasmine/SpecRunner.cshtml
@@ -11,8 +11,10 @@
     <!-- include source files here... -->
     <!--DEBUG: -->
     <script type="text/javascript" src="~/src/AssetManager.js" defer></script>
-    <script type="text/javascript" src="~/src/CanvasManager.js" defer></script>
+    <script type="text/javascript" src="~/src/Canvas.js" defer></script>
+    <script type="text/javascript" src="~/src/Config.js" defer></script>
     <script type="text/javascript" src="~/src/Controller.js" defer></script>
+    <script type="text/javascript" src="~/src/Debug.js" defer></script>
     <script type="text/javascript" src="~/src/Dialog.js" defer></script>
     <script type="text/javascript" src="~/src/Entity.js" defer></script>
     <script type="text/javascript" src="~/src/Game.js" defer></script>
@@ -24,7 +26,7 @@
 
     <!-- include spec files here... -->
     <script type="text/javascript" src="~/spec/AssetManagerSpec.js"></script>
-    <script type="text/javascript" src="~/spec/CanvasManagerSpec.js"></script>
+    <script type="text/javascript" src="~/spec/CanvasSpec.js"></script>
     <script type="text/javascript" src="~/spec/ControllerSpec.js"></script>
     <script type="text/javascript" src="~/spec/DialogSpec.js"></script>
     <script type="text/javascript" src="~/spec/EntitySpec.js"></script>
