--- a/engine/spec/Views/Jasmine/SpecRunner.cshtml
+++ b/engine/spec/Views/Jasmine/SpecRunner.cshtml
@@ -27,14 +27,13 @@
     <!-- include spec files here... -->
     <script type="text/javascript" src="~/spec/AssetManagerSpec.js"></script>
     <script type="text/javascript" src="~/spec/CanvasSpec.js"></script>
+    <script type="text/javascript" src="~/spec/ConfigSpec.js"></script>
     <script type="text/javascript" src="~/spec/ControllerSpec.js"></script>
     <script type="text/javascript" src="~/spec/DialogSpec.js"></script>
     <script type="text/javascript" src="~/spec/EntitySpec.js"></script>
     <script type="text/javascript" src="~/spec/GameSpec.js"></script>
     <script type="text/javascript" src="~/spec/InputSpec.js"></script>
     <script type="text/javascript" src="~/spec/MathUtilSpec.js"></script>
-
-    
 </head>
 <body></body>
 </html>
