--- a/engine/spec/Views/Jasmine/SpecRunner.cshtml
+++ b/engine/spec/Views/Jasmine/SpecRunner.cshtml
@@ -10,6 +10,7 @@
 
     <!-- include source files here... -->
     <!--DEBUG: -->
+    <script type="text/javascript" src="~/src/namespace.js" defer></script>
     <script type="text/javascript" src="~/src/AssetManager.js" defer></script>
     <script type="text/javascript" src="~/src/Canvas.js" defer></script>
     <script type="text/javascript" src="~/src/Config.js" defer></script>
