--- a/engine/spec/Views/Jasmine/SpecRunner.cshtml
+++ b/engine/spec/Views/Jasmine/SpecRunner.cshtml
@@ -35,6 +35,7 @@
     <script type="text/javascript" src="~/spec/GameSpec.js"></script>
     <script type="text/javascript" src="~/spec/InputSpec.js"></script>
     <script type="text/javascript" src="~/spec/MathUtilSpec.js"></script>
+    <script type="text/javascript" src="~/spec/SpriteSpec.js"></script>
 </head>
 <body></body>
 </html>
