--- a/engine/spec/Views/Jasmine/SpecRunner.cshtml
+++ b/engine/spec/Views/Jasmine/SpecRunner.cshtml
@@ -18,6 +18,7 @@
     <script type="text/javascript" src="~/src/Debug.js" defer></script>
     <script type="text/javascript" src="~/src/Dialog.js" defer></script>
     <script type="text/javascript" src="~/src/Entity.js" defer></script>
+    <script type="text/javascript" src="~/src/Error.js" defer></script>
     <script type="text/javascript" src="~/src/Game.js" defer></script>
     <script type="text/javascript" src="~/src/Input.js" defer></script>
     <script type="text/javascript" src="~/src/MathUtil.js" defer></script>
